# Sistema-de-Gestion-QA-QC

./: .gitignore  .lychee.toml  AGENTS.md  BACKLOG.md  CODEX_WORKFLOW.md  README.md  ROADMAP.md  STRUCTURE.md  presentacion.md
.codex/: config.toml
.github/: CODEOWNERS  pull_request_template.md
.openclaw-tests/: protection-test.txt
agent_runtime/: README.md  constraints-ci.txt  pyproject.toml  requirements-pinned.txt
agent_runtime/scripts/: run_qa_monitor.sh
agent_runtime/sgc_agents/: __init__.py  cli.py  config.py  multiagent.py  orchestrator.py  schemas.py  specialists.py  utils.py
agent_runtime/sgc_agents/templates/: dashboard.html
agent_runtime/sgc_agents/tools/: build_dashboard.py  build_indexes.py  build_instrumentation_snapshot.py  compliance_tools.py  document_tools.py  qa_monitor.py  scaffold.py
agent_runtime/tests/: conftest.py  test_cli.py  test_config.py  test_dashboard_builder.py  test_document_write_tools.py  test_multiagent.py  test_orchestrator.py  test_phase12_scripts.py  test_qa_monitor.py  test_regressions.py  test_scaffold.py  test_specialists.py  test_traceability_axioms.py  test_zero_trust_hardening.py
docs/: AGENTS.md
playbooks/: PHASE12_AGENTIC_INTELLIGENCE.md  SPRINT1_MULTIDISCIPLINA.md
scripts/: demo_spec_parser.py  release_preflight.sh  sgc_ask.py  watchdog_nc.py
templates/: TEMPLATE_Checklist_Liberacion_Disciplina.md  TEMPLATE_Documento_SGC.md  TEMPLATE_Ficha_Tecnica_Disciplina.md  TEMPLATE_Ficha_de_Proceso.md  TEMPLATE_Formato.md  TEMPLATE_ITP_Disciplina.md  TEMPLATE_Instructivo.md  TEMPLATE_Procedimiento.md
(+111 files in other folders)
